# Minesweeper_Game_Qt_Cplusplus_QML

./: CMakeLists.txt  Minesweeper.bat  Minesweeper.sh  README.md
assets/: resources.qrc
qml/: Board.qml  CMakeLists.txt  Flag.qml  GameArea.qml  GameDimensionsDialog.qml  GameInput.qml  Main.qml  Mine.qml  Tile.qml  UiScaler.qml
qml/overlays/: EndGameOverlay.qml  EscapeMenuOverlay.qml
src/: CMakeLists.txt  controller.cpp  controller.h  coordinates.cpp  coordinates.h  coordinates_validator.h  game.cpp  game.h  game_coordinator.cpp  game_coordinator.h  input_handler.cpp  input_handler.h  main.cpp  minefield.cpp  minefield.h  mines_generator.cpp  mines_generator.h  overlay_manager.cpp  overlay_manager.h  sound_player.h  tile.cpp  tile.h  tile_state_manager.h  tiles_manager.cpp  tiles_manager.h  tiles_uncoverer.cpp  tiles_uncoverer.h
src/asset_management/: asset_loader.cpp  asset_loader.h  asset_repository.h
src/backend/: CMakeLists.txt  common.h  coordinates.cpp  coordinates.h  fields_manager.cpp  fields_manager.h  fields_uncoverer.cpp  fields_uncoverer.h  log_manager.h  mines_generator.cpp  mines_generator.h
src/backend/model/: field.cpp  field.h  minefield.cpp  minefield.h  model.cpp  model.h
src/config/: game_config.h  minefield_parameters.h
src/frontend/: CMakeLists.txt  end_game_dialog.cpp  end_game_dialog.h  field_button.cpp  field_button.h  game_dimensions_dialog_window.cpp  game_dimensions_dialog_window.h  gui_config.h  main_window.cpp  main_window.h
src/frontend/resource_files/: images.qrc
src/frontend/ui_forms/: game_dimensions_dialog_window.ui  main_window.ui
src/model/: model.cpp  model.h  tiles_model.cpp  tiles_model.h
src/state_machine/: game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: ended_defeat_state.h  ended_victory_state.h  running_state.h
tests/: CMakeLists.txt
tests/src/: common_test_fixture.h  field_manager_test.cpp  field_test.cpp  field_uncoverer_test.cpp  minefield_test.cpp  mines_generation_test.cpp  tile_test.cpp  tiles_manager_test.cpp  tiles_uncoverer_test.cpp
