set(MODULE_NAME MinesweeperQml)
set(LIB_NAME ${MODULE_NAME}Lib) # MinesweeperQmlLib

qt_add_library(${LIB_NAME} STATIC)

target_link_libraries(${LIB_NAME} PRIVATE Qt6::Quick Qt6::QuickControls2Basic Qt6::QuickLayouts)

qt_add_qml_module(${LIB_NAME}
        URI ${MODULE_NAME}
        VERSION 1.0
        OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/MinesweeperQml
        QML_FILES
        Main.qml
        GameArea.qml
        Board.qml
        GameInput.qml
        UiScaler.qml
        GameDimensionsDialog.qml

        Tile.qml

        Flag.qml
        Mine.qml

        overlays/EndGameOverlay.qml
        overlays/EscapeMenuOverlay.qml
)
